gitea/gitea-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitea
  labels:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/component: git-server
    app.kubernetes.io/managed-by: kubectl
