gitea/gitea-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: gitea
  labels:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/component: git-server
    app.kubernetes.io/managed-by: kubectl
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gitea
      app.kubernetes.io/component: git-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gitea
        app.kubernetes.io/component: git-server
        app.kubernetes.io/managed-by: kubectl
    spec:
      containers:
        - name: gitea
          image: docker.gitea.com/gitea:1.24.6
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          nfs:
            path: /export/Kubernetes/gitea
            server: 192.168.86.107
