gitea/gitea-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: gitea
spec:
  selector:
    app: gitea
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
    - protocol: TCP
      port: 22
      targetPort: 22
