gitea/gitea-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitea
  namespace: gitea
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`git.albinmedoc.se`)
      kind: Rule
      services:
        - name: gitea
          port: 3000
